Fix erroneous double scaling of angle optimization steps

--- a/ProteinGraph.ipynb
+++ b/ProteinGraph.ipynb
@@ -376,7 +376,7 @@
     "        delayed(process_dist_bond)(e.attributes(), e.source_vertex['pos'], e.target_vertex['pos']) for e in graph.es)\n",
     "    # unpack the results\n",
     "    off, err = zip(*result)\n",
-    "    offsets += np.array(off).sum(axis=0)\n",
+    "    offsets += np.array(off).sum(axis=0) * length_step_size\n",
     "    total_length_error += np.sum(err)\n",
     "    # normalize the total length error\n",
     "    total_length_error /= len(graph.es)\n",
@@ -392,7 +392,7 @@
     "    \n",
     "    # apply the offset to the vertex positions\n",
     "    for v, offset in zip(graph.vs, offsets):\n",
-    "        v['pos'] += offset * length_step_size\n",
+    "        v['pos'] += offset\n",
     "    \n",
     "    status = dict(length_error=f'{total_length_error:.3g}', angle_error=f'{total_angle_error:.3g}')\n",
     "    t.set_postfix(status)\n",
